test/chainsaw/authpolicy/auto_login_external_idp/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: auto-login-external-idp
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      labels:
        istio-injection: enabled
  steps:
    - try:
        - create:
            file: ../../../resources/skiperator/application-with-istio-mount.yaml
        - create:
            file: ../../../resources/secret/oauth-secret.yaml
        - create:
            file: authpolicy.yaml
        - assert:
            file: authpolicy-assert.yaml
